[fix]: fixed input width too small

--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -7,6 +7,7 @@
 }
 .landing-page__actions > input {
   border: 0;
+  flex-grow: 1;
 }
 .landing-page__poster > img {
   max-width: 80%;
@@ -24,8 +25,17 @@ h2.landing-page__title {
   min-width: fit-content;
 }
 div.landing-page__content {
+  min-width: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+}
+.landing-page__actions {
+  width: 100%;
+  padding: 0 1rem;
+}
+.reverse {
+  flex-wrap: wrap-reverse;
   justify-content: center;
 }
